fix(ui): InsightIcon - improve warning contrast

--- a/packages/ui/src/components/insight-icon/insight-icon.module.css
+++ b/packages/ui/src/components/insight-icon/insight-icon.module.css
@@ -13,7 +13,7 @@
 
 .warning {
   padding-top: 1px;
-  background: var(--color-yellow-200);
+  background: var(--color-yellow-100);
   color: var(--color-yellow-900);
 }
 
